specs/archive/m12-build-plan-v1/evidence/phase-4-RED.json.stderr
⎯⎯⎯⎯⎯⎯ Failed Suites 1 ⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/m12-tasks-generate.test.mjs [ tests/m12-tasks-generate.test.mjs ]
Error: ENOENT: no such file or directory, open '/Users/Hugh/Hugh/Project/workflowhub/workflows/tasks-generate/SKILL.md'
 ❯ readSkillBody tests/m12-tasks-generate.test.mjs:26:15
     24| // Helper — reads SKILL.md body (content after YAML frontmatter)
     25| function readSkillBody() {
     26|   const raw = readFileSync(SKILL_PATH, "utf8");
       |               ^
     27|   // Strip YAML frontmatter (first --- block)
     28|   const bodyMatch = raw.replace(/^---[\s\S]*?---\r?\n/, "");
 ❯ tests/m12-tasks-generate.test.mjs:177:16

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/1]⎯

